--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "fuse.js": "^3.4.5",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.19.1",
     "sqlite3": "^4.0.9"
